get product by id
