# pc-parts-api/app/Providers/RouteServiceProvider.php
@@ -52,13 +52,13 @@ class RouteServiceProvider extends ServiceProvider
     private function getUserRoutes()
     {
         require base_path('routes/api/auth.php');
+        require base_path('routes/api/products.php');
 
         Route::group([
             'middleware' => ['auth:user'],
         ], function () {
             require base_path('routes/api/profile.php');
             require base_path('routes/api/orders.php');
-            require base_path('routes/api/products.php');
         });
     }
 
