# pc-parts-api/routes/api/products.php
@@ -4,6 +4,7 @@ use App\Http\Controllers\ProductController;
 use Illuminate\Support\Facades\Route;
 
 Route::group(['prefix' => 'products'], function () {
+    Route::get('/{id}', [ProductController::class, 'readById']);
     Route::get('/{category}', [ProductController::class, 'readByCategory']);
     Route::get('/', [ProductController::class, 'readAll']);
 });
